[gd_scene load_steps=23 format=3 uid="uid://doq05ufh5eteb"]

[ext_resource type="Script" path="res://CharacterBody3D.gd" id="1_b8bo2"]
[ext_resource type="Texture2D" uid="uid://cid5fa5srwb1r" path="res://assets/StellaBody.png" id="2_bqxt6"]
[ext_resource type="Script" path="res://Body.gd" id="3_vwcm5"]
[ext_resource type="Script" path="res://Feet.gd" id="4_q1gfv"]
[ext_resource type="Texture2D" uid="uid://qnfktc43208b" path="res://assets/StellaFrontHand.png" id="5_rq5w1"]
[ext_resource type="Texture2D" uid="uid://bxbp3u2rdbnqg" path="res://assets/StellaRightFoot.png" id="5_v0d0k"]
[ext_resource type="Texture2D" uid="uid://chbpahro6rmm" path="res://assets/StellaBackHand.png" id="6_mg3vj"]
[ext_resource type="Texture2D" uid="uid://cwte3taq5wobu" path="res://assets/StellaLeftFoot.png" id="6_sv18k"]
[ext_resource type="Texture2D" uid="uid://4latup77i7m4" path="res://assets/StellaLeftEye.png" id="7_vncne"]
[ext_resource type="Script" path="res://Eyes.gd" id="8_jvupl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fu5v6"]
size = Vector3(1.54297, 1.72656, 0.82)

[sub_resource type="Animation" id="Animation_rtd76"]
resource_name = "idle_bob"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4, 3),
"transitions": PackedFloat32Array(-2.2974, -1.68179, 1),
"update": 0,
"values": [Vector3(-0.0509526, 1.46522, 0), Vector3(-0.051, 1.8, 0), Vector3(-0.0509526, 1.46522, 0)]
}

[sub_resource type="Animation" id="Animation_epsq7"]
resource_name = "sprint_bob"
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23, 0.47, 0.7, 1),
"transitions": PackedFloat32Array(-2.2974, -1.68179, -2, -1.62451, 1),
"update": 0,
"values": [Vector3(-0.0509526, 1.46522, 0), Vector3(-0.051, 1.9, 0), Vector3(-0.0509526, 1.46522, 0), Vector3(-0.051, 1.9, 0), Vector3(-0.0509526, 1.46522, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(2.14355, 1.46409, 2.54912, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.0698132), Vector3(0, 0, 0.0698132), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_y65as"]
resource_name = "walk_bob"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.69, 1.14, 1.4),
"transitions": PackedFloat32Array(-2.2974, -1.68179, -2, -1.62451, 1),
"update": 0,
"values": [Vector3(-0.0509526, 1.46522, 0), Vector3(-0.051, 1.8, 0), Vector3(-0.0509526, 1.46522, 0), Vector3(-0.051, 1.8, 0), Vector3(-0.0509526, 1.46522, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9, 1.4),
"transitions": PackedFloat32Array(2.14355, 1.46409, 2.54912, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.0698132), Vector3(0, 0, 0.0698132), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ce2v"]
_data = {
"idle_bob": SubResource("Animation_rtd76"),
"sprint_bob": SubResource("Animation_epsq7"),
"walk_bob": SubResource("Animation_y65as")
}

[sub_resource type="Animation" id="Animation_ynbv3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:left_foot_y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:right_foot_y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_xf5n1"]
resource_name = "left_foot_sprint"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:left_foot_y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1.46409, 0.615572, 1),
"update": 0,
"values": [0.0, 1.2, 0.0]
}

[sub_resource type="Animation" id="Animation_cxrom"]
resource_name = "left_foot_walk"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:left_foot_y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1.46409, 0.615572, 1),
"update": 0,
"values": [0.0, 1.2, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kd0u7"]
_data = {
"RESET": SubResource("Animation_ynbv3"),
"left_foot_sprint": SubResource("Animation_xf5n1"),
"left_foot_walk": SubResource("Animation_cxrom")
}

[sub_resource type="Animation" id="Animation_lg81v"]
resource_name = "right_foot_sprint"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:right_foot_y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1.46, 0.636688, 1),
"update": 0,
"values": [0.0, 1.2, 0.0]
}

[sub_resource type="Animation" id="Animation_utyng"]
resource_name = "right_foot_walk"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:right_foot_y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1.46, 0.636688, 1),
"update": 0,
"values": [0.0, 1.2, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ow7mp"]
_data = {
"right_foot_sprint": SubResource("Animation_lg81v"),
"right_foot_walk": SubResource("Animation_utyng")
}

[node name="PlayerBody" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_b8bo2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0245808, 1.01367, 0)
shape = SubResource("BoxShape3D_fu5v6")

[node name="Sprites" type="Node3D" parent="."]

[node name="Body" type="Sprite3D" parent="Sprites"]
transform = Transform3D(0.6, 9.20182e-05, 0, -9.20182e-05, 0.6, 0, 0, 0, 0.6, -0.0509529, 1.46738, 0)
flip_h = true
shaded = true
alpha_cut = 2
texture = ExtResource("2_bqxt6")
region_enabled = true
region_rect = Rect2(0, 0, 897, 700)
script = ExtResource("3_vwcm5")

[node name="BodyBobAnimation" type="AnimationPlayer" parent="Sprites/Body"]
libraries = {
"": SubResource("AnimationLibrary_1ce2v")
}
playback_default_blend_time = 2.0

[node name="BodyRaycast" type="RayCast3D" parent="Sprites/Body"]
transform = Transform3D(1.66667, -0.000255606, 0, 0.000255606, 1.66667, 0, 0, 0, 1.66667, 0.0852966, -2.44562, 0)
target_position = Vector3(0, -7, 0)
debug_shape_custom_color = Color(0.784314, 0, 0, 1)
debug_shape_thickness = 4

[node name="Feet" type="Node3D" parent="Sprites"]
script = ExtResource("4_q1gfv")

[node name="LeftFoot" type="Sprite3D" parent="Sprites/Feet"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -1.11435, -0.743, 0)
shaded = true
alpha_cut = 2
texture = ExtResource("6_sv18k")
region_enabled = true
region_rect = Rect2(126, 718, 194, 141)

[node name="LeftFootRaycast" type="RayCast3D" parent="Sprites/Feet/LeftFoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
target_position = Vector3(0, -18, 0)

[node name="LeftFootAnimation" type="AnimationPlayer" parent="Sprites/Feet/LeftFoot"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_kd0u7")
}

[node name="LeftTimer" type="Timer" parent="Sprites/Feet/LeftFoot"]
one_shot = true

[node name="RightFoot" type="Sprite3D" parent="Sprites/Feet"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 1.04547, -0.786, 0)
shaded = true
alpha_cut = 2
texture = ExtResource("5_v0d0k")
region_enabled = true
region_rect = Rect2(548, 718, 186, 137)

[node name="RightFootRaycast" type="RayCast3D" parent="Sprites/Feet/RightFoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
target_position = Vector3(0, -18, 0)

[node name="RightFootAnimation" type="AnimationPlayer" parent="Sprites/Feet/RightFoot"]
libraries = {
"": SubResource("AnimationLibrary_ow7mp")
}

[node name="RightTimer" type="Timer" parent="Sprites/Feet/RightFoot"]
one_shot = true

[node name="LeftFootTarget" type="Node3D" parent="Sprites/Feet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.11435, -0.743, 0)

[node name="RightFootTarget" type="Node3D" parent="Sprites/Feet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.04547, -0.786, 0)

[node name="FrontHand" type="Sprite3D" parent="Sprites"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -1.85085, 0.370171, 0.3)
shaded = true
alpha_cut = 2
texture = ExtResource("5_rq5w1")
region_enabled = true
region_rect = Rect2(31, 540, 122, 171)

[node name="BackHand" type="Sprite3D" parent="Sprites"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 1.48809, 0.28133, -0.3)
shaded = true
alpha_cut = 2
texture = ExtResource("6_mg3vj")
region_enabled = true
region_rect = Rect2(730, 570, 121, 164)

[node name="Eyes" type="Node3D" parent="Sprites"]
script = ExtResource("8_jvupl")

[node name="LeftEye" type="Sprite3D" parent="Sprites/Eyes"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -0.476, 1.803, 0)
shaded = true
texture = ExtResource("7_vncne")
region_enabled = true
region_rect = Rect2(677, 0, 212, 335)

[node name="RightEye" type="Sprite3D" parent="Sprites/Eyes"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0.461, 1.813, 0)
shaded = true
texture = ExtResource("7_vncne")
region_enabled = true
region_rect = Rect2(677, 0, 212, 335)

[connection signal="timeout" from="Sprites/Feet/LeftFoot/LeftTimer" to="Sprites/Feet" method="_on_left_timer_timeout"]
[connection signal="timeout" from="Sprites/Feet/RightFoot/RightTimer" to="Sprites/Feet" method="_on_right_timer_timeout"]
